index.css
/*Link font faces---------------------------------------------------------*/
@font-face{
    font-family:'DreamscapeSans';
    src:url('fonts/DreamscapeSans.woff') format('woff');
    src:url('fonts/DreamscapeSans.woff2') format('woff2');
}
@font-face{
    font-family:'HelveticaNeue-Light';
    src:url('fonts/HelveticaNeue-Light.woff') format('woff');
    src:url('fonts/HelveticaNeue-Light.woff2') format('woff2');
}
@font-face{
    font-family:'HelveticaNeue-Thin';
    src:url('fonts/HelveticaNeue-Thin.woff') format('woff');
    src:url('fonts/HelveticaNeue-Thin.woff2') format('woff2');

}
@font-face{
    font-family:'kawoszeh';
    src:url('fonts/kawoszeh.woff') format('woff');
    src:url('fonts/kawoszeh.woff2') format('woff2');
}

/*---------------------------------------------------------------------*/
/*Reset Default styles*/
body,h1,h2,h3,p,ul,li,form{
    margin:20px;
    padding:0;
}

/*Global Default styles*/
body{
    font-family:'HelveticaNeue-Thin';
    font-size: 16px;
    line-height:1.6;
    color:#EFEFEF;
    background-color:#1A1818;
    margin:10px;
    padding:0;
    max-width: 100%;
}

/*header and hero ---------------------------------------------*/

/*remove list style*/
.main-nav ul {
    list-style: none; 
    padding: 0; 
    
}

/* Apply styles to the navigation items */
.main-nav li{
    display:inline-block; /*display side by side*/
    font-size:17px;
    word-spacing:2px;
    margin:50px 95px -20px 95px ; /*spacing*/
}

/* grid - 5 by3*/
.hero {
    display:grid;
    margin-top:100px;
    grid-template-rows: 40px 280px 60px 60px 60px 60px;
    grid-template-columns:15% 70% 15%;   
}
.top-star{
    width:50;
    height:55;
    grid-row:1;
    grid-column:3;
    margin-top:-30px;
    margin-left:-18px;
    
}
.hero-title{
    font-family:'kawoszeh';
    font-size:120px;
    font-weight: 80;
    word-spacing: -10px;
    line-height:1.1;
    grid-row:2;
    grid-column:2;
    text-align:center;
    margin-left:-25px;
    margin-bottom:-150px;
    
}
.hero-par{
    font-family:'HelveticaNeue-Thin';
    font-size: 17px;
    word-spacing:3px;
    line-height:1.3;
    grid-row:3;
    grid-column:2;
    text-align:center;
    color:#B9B9B9;
    
}
.top-spiral{
    width:387;
    height:387;
    margin-left:-250px;
    margin-top:-105px;
    grid-row:3/5;
    grid-column:1;
    
    animation: spin 10s linear infinite;     
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
/*About me section ---------------------------------------------*/

/* Grid Setup - 2rows by4 col*/

.about-content {
    display: grid;
    grid-template-rows: 450px 40px ;
    grid-template-columns: 500px 50px 500px 50px;  
    
}

/* Grouped sections*/
.text-content{
    grid-row:1;
    grid-column:1;
    margin-left:85px;
    width:370px;
    

}
.line{
    grid-row:1;
    grid-column:2;
    border-right: 1.8px solid white; 
    height: 450px; 
    margin-top:10px;
    margin-left:90px;
    
}


.about-title{
    font-family:'kawoszeh';
    font-size: 50px;
    font-weight: 50;
    margin-top: -10px;
    
}

.about-par{
    margin-top:-10px;
    margin-left:37px;
    color:#B9B9B9;
    
}
.corner-star{
    grid-column:4;
    max-width: 80px; 
    max-height: 80px;
    margin-top:-40px;
    margin-left:500px;
    z-index:1px;
    position: relative;
    
    
}

.me-pic{
    grid-row:1/ span 2;
    grid-column:3/span 4; 
    max-width: 100%; 
    max-height: 100%; 
    margin-top:-50px;
    margin-left:140px; 
    z-index: 0;  
      
}
.line-container{
    display: flex;
    align-items: center;
    justify-content: center;

}
.dotted-line{
    margin-top:20px;
    border-top: 1px dotted white; 
    width: 95%;
}

/*Work section ---------------------------------------------*/
.work-titke{
    font-family:'kawoszeh';
    font-size: 50px;
    font-weight: 50;
    margin-top: 20px;
    margin-left:80px;
    

}
.twocol-table{
    display: grid;
    grid-template-rows: 1000px ;
    grid-template-columns: 38% 55% 7%;
    margin-bottom: -30px;
}

.xp-one{
margin-top:-40px;
}
.outer-box-container{
    display: flex;
    align-items: center; 
    
    
}
.company{
    text-align: right;
    
}
.short-line{
    border-bottom: 1.5px solid white;
    width:100%;
    align-items: start;
    margin-top:-10px;

}

.num{
    font-family:'kawoszeh';
    font-size: 35px;
    font-weight: 50;
    margin-bottom: -60px;
    justify-content: flex-start;
}
.xp-par{
    text-align: left;
    color:#B9B9B9;
}
.xp-dates{
    font-family:'HelveticaNeue-Light';
    font-size: 18px;  

}


/*Skills section ---------------------------------------------*/
.skills-container{
    position: relative;
    overflow: hidden;
    font-family:'DreamscapeSans';
    font-size: 18px;
    white-space: nowrap;
    margin-top: 30px;
    max-height: 19px;

    
}

.skills-list {
    display: flex;
    align-items: center;
    justify-content: space-around;
}


.scroll-one{
    animation: scroll-one 10s linear infinite;
}
.scroll-two{
    animation: scroll-two 10s linear infinite;

}
@keyframes scroll-one  {
    from {
        transform: translateX(0); 
    }
    to {
        transform: translateX(-100%); 
    }
}

    
@keyframes scroll-two {
    from {
        transform: translateX(100%); 
    }
    to {
        transform: translateX(0); 
    }
}

/*Education section ---------------------------------------------*/
.hoz-line{
    border-top: 1.5px solid white; 
    width: 95%; 
    margin-top: 30px;

}

.twocol-tab{
    display: grid;
    grid-template-rows: 175px 175px ;
    grid-template-columns: 40% 60%  ;
    margin-bottom: -20px;
}
.edu-titke{
    font-family:'kawoszeh';
    font-size: 50px;
    font-weight: 50;
    margin-top: 20px;
    margin-left:80px;   
}

.secondhalf-tab{
    grid-column: 2/3;
    grid-row-start: 1;
    grid-row-end: span 2;
    border-left:1.5px solid white ;
    margin-top: 30px;
    height: 80%;
}

.col-twothree{
    display: grid ;
    grid-template-rows: 48% 4% 48%;
    margin-left: 20px;
}
    
.across-line-two{
    border-bottom:1.5px solid white ;
    grid-row: 2;
    margin-top: 20px;
    width: 100%;

}
.across-line-three{
    border-bottom:1.5px solid white ;
    grid-row: 2;
    margin-top: 20px;
    width: 100%;
    margin-left: -13%;

}

 .col-two{
    grid-column: 1 ;
   
}
 .col-three{
    grid-column: 2;
    border-left:1.5px solid white ;
    height: 80%;
    padding-left:20px;
    
}
.bottom-right{
    grid-row: inherit;
    padding-left:20px;
    margin-left: -20px;
    
}
.top-left{
    margin-left: 3.4%;
    padding-top: 1%;
}
.bottom-left{
    margin-left: 3.4%;
    border-right:1.5px solid white ;
}
.second-top-row{
    padding-left: 20px;
    margin-bottom: 10px;
    grid-row: span 1;
    margin-left: -20px;

}
.top-right{
    padding-left: 20px;
    padding-top: 1%;
}
.three-top-row{
    margin-left:-20px ;
    margin-bottom: 10px;
    grid-row: span 1;

}
.second-bottom-row{
    margin-top: 20px;
    grid-row: span 3;
    margin-bottom: -20%;
    padding-left: 20px;
    margin-left: -20px;


}
.three-bottom-row{
    grid-row: span 3;
    margin-top: 20px;  
}

/*Education section -text styling ---------------------------------------------*/
.school{
    font-family:'HelveticaNeue-Light';
    font-weight: 100;
    font-size: 16px;
    margin-bottom: -15px;

}

.course{
    margin-left:-2px;
    text-align: start;
    color:#B9B9B9;
}

.date-container{
margin-left: -55px;
padding-right: 20px;
}
.date-container-left{
   
    margin-top: -5px;
    padding-right: 20px;
    
}
.date-container-fr{
 
    margin-top: 45.5px;
    padding-right: 30px;
    
}
.date-container-tr{
    margin-left: -20px;
    padding-right: 30px;
}
.edu-dates{
    font-family:'HelveticaNeue-Light';
    font-size: 12px;
    text-align: end;
    margin-top: -15px;
    
}

/*Projects section ---------------------------------------------*/

.project-conatiner{
    display: grid;
    grid-template-columns: 70% 30% ;
    grid-template-rows: 300px;
    margin-bottom: 30px;
    margin-top: 30px;
    padding-top: 10px;

}
.proj-left{
    grid-row: 1;
    grid-column:  1;

}
.proj-right{
    border-left:1.5px solid white ;
    grid-row: 1;
    grid-column: 2;

    
}
.proj-title{
    font-family:'kawoszeh';
    font-size: 50px;
    font-weight: 50;
    margin-left:80px;

}
.proj-content{
    color:#B9B9B9;
    margin-left:85px;
}
button {
    height:40px;
    width:120px;
    background:none;
    border-radius: 30px;
    margin-left:80px;
    border-width: 1px;
    border-color: #EFEFEF;
  
}
.git-button-link{
    font-family:'HelveticaNeue-Light';
    font-size: 15px;
    text-decoration: none;
    font-weight: 200;
    color: #EFEFEF;
    text-decoration: none;

}
button:hover{
   border-radius: 30px;
   border-width: 1px;
   background-color: #EFEFEF;
   border-color:#EFEFEF;
}
.git-button-link:hover{
    color:#1A1818;
    font-family:'HelveticaNeue-Light';
    font-size: 15px;
    font-style: normal;
    font-weight:300;
    text-decoration: none;
}
.bttm-container{
    margin-left:250px;
    overflow-x: hidden;
}
.bottom-spiral{
    width:275px;
    height:275px;
    animation: spin 10s linear infinite;     
}

/*Projects section ---------------------------------------------*/

.contact-container{
    margin-top: 20px;
   
}

.contact-title{
    font-family:'kawoszeh';
    font-size: 50px;
    font-weight: 50;
    margin-right:80px;
    text-align: end;
}

.grid-contian{
    display: flex;
    align-items: center;
    justify-content: center;
   
  
}

.con-gird{
    display: grid;
    grid-template-columns: 250px 250px 250px 250px ;
    grid-template-rows:40px;
    
}
.con-one{
    grid-column: 1;
    border:1.5px solid white ;
    text-align: center;
}
.con-two{
    grid-column: 2;
    border:1.5px solid white ;
    text-align: center;
}
.con-three{
    grid-column: 3;
    border:1.5px solid white ;
    text-align: center;
}
.con-four{
    grid-column: 4;
    border:1.5px solid white ;
    text-align: center;
}
.btm-text{
    margin-top: 7px;
    color:#B9B9B9;
}
.twttr-icon{
    margin-top: 10px;
    width: 20px;
    height: 20px;
    margin-right: 40px;
    text-decoration: none;
}
.lick-icon{
    margin-top: 10px;
    width: 20px;
    height: 20px;
    text-decoration: none;
}

.site-footer{
    margin-top: 45px;
    text-align: center;
}
.footer-content{
    color:#B9B9B9;
}

